--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <title>スケジュール管理アプリ</title>
+  <title>修正版スケジュール管理アプリ</title>
 </head>
 
 <body>
